# DynamicScraper

./: .dockerignore  .gitignore  Dockerfile  README.md  about_products_barbie.json  cardrobber.py  main.py  products_barbie_url.json  products_url.json  pyproject.toml  requirements.txt
