[project]
name = "dynamicscraper"
version = "0.1.0"
description = ""
authors = [
    {name = "gewoggewog",email = "gewoggewog@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "selenium (>=4.35.0,<5.0.0)",
    "lxml (>=6.0.1,<7.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
